--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+File transfer 
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-label>
+    <ion-text>
+      <h1>{{status}}</h1>
+    </ion-text>
+  </ion-label>
+  <ion-button (click)="RecordAudio()">Record  </ion-button>
+  <ion-button (click)="StopRecording()">Stop</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
 </ion-content>
+<ion-button (click) = "UploadFile()">  UploadFile </ion-button>
+<ion-label> <b>{{uploadText}}</b></ion-label>
+<br  /> <br />
+
+<ion-button (click)="AbortUpload()">Cancel Uploading
+
+</ion-button>
+
+
