--- a/src/app/recorder/recorder.page.html
+++ b/src/app/recorder/recorder.page.html
@@ -13,7 +13,7 @@
     </ion-text>
     </ion-label>
     <ion-button (click)="RecordAudio()">Record </ion-button>
-    <ion-button (click)="StopRecording()" (click)="upload()">Stop</ion-button>
+    <ion-button (click)="StopRecording()" (click)="upload1()">Stop</ion-button>
     
     </ion-content>
     
