--- a/src/app/recorder/recorder.page.html
+++ b/src/app/recorder/recorder.page.html
@@ -12,7 +12,12 @@
     <h1>{{status}}</h1>
     </ion-text>
     </ion-label>
-    <input type="file" id="avatar" />
+    <ion-item lines="full">
+        <ion-label position="floating">Record Name</ion-label>
+        <ion-input placeholder="Insert Record Name" id="avatar" type="text" class="input" [(ngModel)]="artistCurrent.recordname" #name required>
+        </ion-input>
+    </ion-item> 
+    <ion-button type="input" id="avatar" (click)="SaveNameRecord()">Save Name Record </ion-button>
     <ion-button (click)="RecordAudio()">Record </ion-button>
     <ion-button id="avatar" (click)="StopRecording()"  (click)="sendAudio()">Stop</ion-button>
     <!-- (click)="sendAudioToSomewhere()" -->
