--- a/src/app/live/live.page.html
+++ b/src/app/live/live.page.html
@@ -20,7 +20,7 @@
             style="padding:3px" class="fab fa-youtube"></i></a>
             </div><br>
             <div style="margin: 20px" class="container has-text-centered" style="text-align: center">
-                <!-- <youtube-player *ngIf="showInfo" [videoId]="youtube_parser(url)">
+             <youtube-player *ngIf="showInfo" [videoId]="youtube_parser(url)">
         </youtube-player>
       </div>
       <div *ngIf="showInfo" style="margin: 20px" class="container has-text-centered"
@@ -38,13 +38,11 @@
         <div class="col-xl-3 col-md-6 mb-4" *ngFor="let video of youtubedata">
           <youtube-player style="padding:5px" [videoId]="video.id.videoId">
           </youtube-player> -->
-                <!--           <p class="card-category text-gray">{{video.snippet.title}}</p>
- -->
+          <p class="card-category text-gray">{{video.snippet.title}}</p>
             </div>
         </div>
     </div>
-    <!--   </div>
- -->
+ </div>
 </section>
 <footer>
     <div class="container has-text-centered" style="color:#ccc">
@@ -52,9 +50,9 @@
     </div>
 </footer>
 
-<!-- <ngx-spinner bdOpacity=0.9 bdColor="rgba(51,51,51,0.53)" size="medium" color="#ffffff" type="pacman"
+ <ngx-spinner bdOpacity=0.9 bdColor="rgba(51,51,51,0.53)" size="medium" color="#ffffff" type="pacman"
   [fullScreen]="true">
   <p style="color: white; font-weight: bold"> {{loading}} </p>
 </ngx-spinner>
- -->
+
 <router-outlet></router-outlet>
