--- a/src/app/live/live.page.html
+++ b/src/app/live/live.page.html
@@ -1,3 +1,11 @@
+<ion-toolbar>
+    <ion-buttons (click)="logout()" class="logout">
+      <ion-icon class="icon" name="log-out-outline"></ion-icon>
+    </ion-buttons>
+    <ion-header class="logotoolbar">
+    </ion-header>
+  </ion-toolbar><meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
 <section class="hero is-primary is-medium" style="background: #e6dddd">
     <div class="hero-body">
         <div class="container has-text-centered">
