--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,3 +1,23 @@
+
+  .logout{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    margin-top: 5px;
+    margin-right: 7px;
+    color: #fafaf8;
+  }
+  .icon {
+    font-size: 40px;
+    margin-top: 5px;
+    background: #000000;
+  }
+  
+  
+  
+
+
+
 *,
 :after,
 :before {
