--- a/src/app/choice-account/choice-account.page.html
+++ b/src/app/choice-account/choice-account.page.html
@@ -33,6 +33,11 @@
 </ion-content> -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<ion-buttons (click)="logout()" class="logout">
+  <ion-icon class="icon" name="log-out-outline"></ion-icon>
+</ion-buttons>
+<ion-header class="logotoolbar">
+</ion-header>
 <ion-content class="sfondo">
     <p class="logo"></p>
     <ion-grid class="pos-bottoni">
@@ -66,9 +71,3 @@
     </ion-grid>
 </ion-content>
 
-<ion-tab-bar slot="bottom">
-    <ion-button [routerLink]="['/login-register']">
-        <ion-icon name="log-out-outline"></ion-icon>
-        <ion-label>Logout</ion-label>
-    </ion-button>
-</ion-tab-bar>
