--- a/src/app/geolocalization/geolocalization.page.html
+++ b/src/app/geolocalization/geolocalization.page.html
@@ -1,10 +1,10 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Distance Calculator
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+  <ion-buttons (click)="logout()" class="logout">
+    <ion-icon class="icon" name="log-out-outline"></ion-icon>
+  </ion-buttons>
+  <ion-header class="logotoolbar">
+  </ion-header>
+</ion-toolbar><meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <ion-content>
   <div class="ion-padding">
