--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,4 +1,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <ion-buttons (click)="logout()" class="logout">
+      <ion-icon class="icon" name="log-out-outline"></ion-icon>
+    </ion-buttons>
+    <ion-header class="logotoolbar">
+    </ion-header>
 <ion-content class="sfondo">
     <p class="logo">
 
@@ -25,9 +30,3 @@
     </div>
 </ion-content>
 
-<ion-tab-bar slot="bottom">
-    <ion-button [routerLink]="['/login-register']">
-        <ion-icon name="log-out-outline"></ion-icon>
-        <ion-label>Logout</ion-label>
-    </ion-button>
-</ion-tab-bar>
