--- a/src/app/recorder/recorder.page.html
+++ b/src/app/recorder/recorder.page.html
@@ -1,9 +1,13 @@
-<ion-header [translucent]="true">
-    <ion-toolbar>
-        <ion-title>
+<ion-toolbar>
+    <ion-buttons (click)="logout()" class="logout">
+      <ion-icon class="icon" name="log-out-outline"></ion-icon>
+    </ion-buttons>
+    <ion-header class="logotoolbar">
+    </ion-header>
+  </ion-toolbar><meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-        </ion-title>
-    </ion-toolbar>
+<ion-header [translucent]="true">
+    
 </ion-header>
 
 <ion-content [fullscreen]="true">
