--- a/src/app/registration-artist/registration-artist.page.html
+++ b/src/app/registration-artist/registration-artist.page.html
@@ -85,6 +85,11 @@
 
 </ion-content> -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<ion-buttons (click)="logout()" class="logout">
+    <ion-icon class="icon" name="log-out-outline"></ion-icon>
+  </ion-buttons>
+  <ion-header class="logotoolbar">
+  </ion-header>
 <ion-content class="sfondo">
     <p class="logo">
     </p>
@@ -147,9 +152,3 @@
 
 </ion-content>
 
-<ion-tab-bar slot="bottom">
-    <ion-button [routerLink]="['/login-register']">
-        <ion-icon name="log-out-outline"></ion-icon>
-        <ion-label>Logout</ion-label>
-    </ion-button>
-</ion-tab-bar>
