--- a/src/app/view-users/view-users.page.html
+++ b/src/app/view-users/view-users.page.html
@@ -1,16 +1,18 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-title>view-users</ion-title>
-    </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+    <ion-buttons (click)="logout()" class="logout">
+      <ion-icon class="icon" name="log-out-outline"></ion-icon>
+    </ion-buttons>
+    <ion-header class="logotoolbar">
+    </ion-header>
+  </ion-toolbar><meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <ion-content>
 
 </ion-content>
 
-<ion-tab-bar slot="bottom">
+<!-- <ion-tab-bar slot="bottom">
     <ion-button [routerLink]="['/login-register']">
         <ion-icon name="log-out-outline"></ion-icon>
         <ion-label>Logout</ion-label>
     </ion-button>
-</ion-tab-bar>
+</ion-tab-bar> -->
