--- a/src/app/recorder/recorder.page.html
+++ b/src/app/recorder/recorder.page.html
@@ -27,16 +27,9 @@
         </ion-input>
     </ion-item>
 
-    <!-- <ion-item lines="full">
-        <ion-label position="floating">Song Name</ion-label>
-        <ion-input placeholder="Insert Song Name" id="avatar" type="text" class="input"
-            [(ngModel)]="artistCurrent.song" #name required>
-        </ion-input>
-    </ion-item> -->
    
     <input type="file" id="id">
-<!--     <ion-button (click)="SaveSong()">Save Name Song </ion-button>
- -->    <ion-button   (click)="sendAudio1()">Send Song </ion-button>
+    <ion-button   (click)="sendAudio1()">Send Song </ion-button>
 
 
 <br>
@@ -44,5 +37,5 @@
     <ion-button (click)="RecordAudio()">Record </ion-button>
 
     <ion-button id="fileUpload" (click)="StopRecording()" (click)="uploadfile()">Stop</ion-button>
-    <!--      (click)="sendAudioToSomewhere()"-->
+
 </ion-content>
