--- a/src/app/view-users/view-users.page.html
+++ b/src/app/view-users/view-users.page.html
@@ -1,41 +1,62 @@
 <ion-toolbar>
-    <ion-buttons (click)="logout()" class="logout">
-      <ion-icon class="icon" name="log-out-outline"></ion-icon>
-    </ion-buttons>
-    <ion-header class="logotoolbar">
-    </ion-header>
-  </ion-toolbar><meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <ion-buttons (click)="logout()" class="logout">
+    <ion-icon class="icon" name="log-out-outline"></ion-icon>
+  </ion-buttons>
+  <ion-header class="logotoolbar">
+  </ion-header>
+</ion-toolbar>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<ion-content>
-  
-  <ul id="menu">
-   <h2><li><a href="#">Musica</a></li></h2>
-    <h2><li class="active"><a href="#">Live</a></li></h2>
-    <h2><li><a href="#">Search</a></li></h2>
-  <!--   <li><a href="#">Portfolio</a></li>
-    <li><a href="#">Contact</a></li> -->
+<ul>
+  <ion-segment mod="md" [(ngModel)]="segment" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="0">
+      <ion-icon name="Headset"></ion-icon>
+      Live
+    </ion-segment-button>
+    <ion-segment-button value="1">
+      <ion-icon name="musical-notes"></ion-icon>
+      Music
+    </ion-segment-button>
+    <ion-segment-button value="2">
+      <ion-icon name="Search"></ion-icon>
+      Search
+    </ion-segment-button>
+  </ion-segment>
 </ul>
 
 
+<ion-content>
+
+  <ion-slides #slides pager=false [options]="sliderOptions" (ionSlideDidChange)="slideShanged(slides)"
+    (ionSlidesDidLoad)="slideShanged(slides)">
+    <ion-slide>
+      <ion-card  button="true">
+        <audio src={{musics.mpeg}} [routerLink]="['/']"></audio>
+        <div class="card_content">
+          <p class="card-title">{{musics.name}}</p>
+        </div>
+      </ion-card>
+    </ion-slide>
+    <ion-slide>2</ion-slide>
+    <ion-slide>3</ion-slide>
+
+  </ion-slides>
+
+</ion-content>
+<!--<ul id="menu" ><ion-slides  [options]="slideOpts" >
+  <ion-slide><h2><li><a href="view-users">Musica</a></li></h2> </ion-slide>
+   <ion-slide> <h2><li><a href="view-users">Live</a></li></h2></ion-slide>
+    <ion-slide><h2><li><a href="view-users">Search</a></li></h2></ion-slide>
+     <li><a href="#">Portfolio</a></li>
+    <li><a href="#">Contact</a></li> 
+</ion-slides>
+  </ul> -->
 
 
 
-<!-- 
-  <ion-slides pager="true" [options]="slideOpts">
-    <ion-slide>
-      <h1>Slide 1</h1>
-      <div style="margin-top: 200px;">musica</div> 
-      
-    </ion-slide>
-    <ion-slide>
-      <h1>Slide 2</h1>
-    </ion-slide>
-    <ion-slide>
-      <h1>Slide 3</h1>
-    </ion-slide>
-  </ion-slides> -->
-  
-  <!-- <ion-tabs>
+
+
+<!-- <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="schedule">
         <ion-icon name="calendar"></ion-icon>
@@ -59,4 +80,3 @@
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs> -->
-</ion-content>
