--- a/src/app/view-users/view-users.page.html
+++ b/src/app/view-users/view-users.page.html
@@ -31,7 +31,7 @@
     (ionSlidesDidLoad)="slideShanged(slides)">
     <ion-slide>
       <ion-card  button="true">
-        <audio src={{musics.mpeg}} [routerLink]="['/']"></audio>
+        <audio src={{musics.mp3}} [routerLink]="['/']"></audio>
         <div class="card_content">
           <p class="card-title">{{musics.name}}</p>
         </div>
