--- a/src/app/live/live.page.scss
+++ b/src/app/live/live.page.scss
@@ -15,6 +15,11 @@ ion-toolbar{
     margin-top: 5px;
     background: #000000;
   }
+  .upload{
+    padding: 15px 50px 15px 70px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .logotoolbar{
     background-image: url("../../assets/icon/labelscoin.png");
     margin-left: auto;
