--- a/src/app/recorder/recorder.page.html
+++ b/src/app/recorder/recorder.page.html
@@ -17,8 +17,12 @@
         <ion-img [src]="artistCurrent.imgURL"></ion-img>
       </ion-card>
 
+      <ion-item lines="full">
+        <ion-label position="floating">Song Name</ion-label>
+        <ion-input placeholder="Insert  Song Name"  type="text" class="input" [(ngModel)]="artistCurrent.songname" #name required>
+        </ion-input>
+    </ion-item>
    
-    
     <label for="id2">Choose your Image of Song:</label>
     <input  type="file" id="id2">
     <br><br><br>
@@ -26,10 +30,10 @@
     <input type="file" id="id">
 
     <br>
-
-    <ion-button id="id2" (click)="uploadSongImage()" >Save Song Image  </ion-button>
-   
+    <ion-button (click)="uploadSongImage()" >Upload Song Image  </ion-button>
+    <ion-button (click)="SaveNameSong()">Save Song Name</ion-button>
     <br>
+    
 
      <ion-button id="id" (click)="sendAudio1()" [routerLink]="['/geolocalization']">Send Song </ion-button>
 
