--- a/src/app/view-users/view-users.page.scss
+++ b/src/app/view-users/view-users.page.scss
@@ -62,7 +62,7 @@ ul#menu li.active, ul#menu li:hover {
     border-bottom: 5px solid #d5111195;
 }
 //-------------------------------
-.cards-background-page{
+/* .cards-background-page{
   display: grid;
   grid-template-columns: 1fr repeat(6, minmax(auto, 60px)) 1fr;
   padding: 5px 5px 5px 5px;
@@ -127,13 +127,6 @@ ion-img{
   }
 }
 
-ion-icon{
-color: #ffba00;
-}
-
-ion-tab-button{
---color-selected:#ffba00;
-}
 
 .header-md::after {
 display: none;
@@ -145,7 +138,7 @@ background-color: #000000;
 
 .button{
 background-color: #000000;
-}
+} */
 //---------------------------------------------
 /*   
   .div{
