--- a/src/app/recorder/recorder.page.html
+++ b/src/app/recorder/recorder.page.html
@@ -14,7 +14,7 @@
 <ion-content [fullscreen]="true">
    
     <ion-card button="true">
-        <ion-img [src]="artistCurrent.imgURL"></ion-img>
+        <ion-img [src]="artistCurrent.imageURL"></ion-img>
       </ion-card>
 
       <ion-item lines="full">
