--- a/src/app/view-users/view-users.page.html
+++ b/src/app/view-users/view-users.page.html
@@ -32,10 +32,12 @@
     >
     <ion-slide >
         <ion-card  button="true">
+          <ion-item *ngFor="let record of records">
         <ion-img src={{record.imgURL}} [routerLink]="['/']"></ion-img>
           <div class="card_content">
-            <p class="card-title">{{record.recordname}}</p>
+            <p class="card-title">{{record.Recordname}}</p>
           </div>
+        </ion-item>
         </ion-card>    
       <!-- <ion-card  button="true">
         <audio src={{musics.mp3}} [routerLink]="['/']"></audio>
@@ -44,12 +46,15 @@
         </div>
       </ion-card> -->
     </ion-slide>
-    <ion-slide  *ngFor="let song of songs" >
-      <ion-card  button="true">
-        <ion-img src={{song.imgURL}} [routerLink]="['/']"></ion-img>
+    <ion-slide   >
+      <ion-card button="true">
+        <ion-item *ngFor="let song of songs">
+          <ion-img src={{song.imgURL}} [routerLink]="['/']"></ion-img>
           <div class="card_content">
-            <p class="card-title">{{song.songname}}</p>
+            <p class="card-title">{{song.Songname}}</p>
           </div>
+        </ion-item>
+
         </ion-card>    
     </ion-slide>
     <ion-slide>3</ion-slide>
